# noarr-tuning

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: dummy_test_ubuntul.yml  noarr_matrix_example_test_ubuntul.yml  noarr_test_ubuntul.yml  opentuner_test_ubuntul.yml  optuna_test_ubuntul.yml
autotuners/: program.hpp
autotuners/atf_test/: CMakeLists.txt  run_cmake.sh  run_direct.sh  test.hpp  test_cmake.cpp  test_direct.cpp
autotuners/opentuner_test/: CMakeLists.txt  run_cmake.sh  run_direct.sh  test.hpp  test_cmake.cpp  test_direct.cpp
autotuners/optuna_test/: CMakeLists.txt  gen-matrices.py  run_cmake.sh  run_direct.sh  test.hpp  test_cmake.cpp  test_direct.cpp
docs_check/: inner-check.py
include/noarr/structures/base/: contain.hpp  utility.hpp
include/noarr/structures/extra/: extraformatters.hpp  metabuilders.hpp  metaformatter.hpp  metamacros.hpp  metastructures.hpp  planner.hpp  shortcuts.hpp
include/noarr/structures/interop/: bag.hpp  tbb.hpp  traverser_iter.hpp
include/noarr/structures/structs/: zcurve.hpp
include/noarr/structures/tuning/: builders.hpp  extraformatters.hpp  formatter.hpp  macros.hpp  tuning.hpp
include/noarr/structures/tuning/formatters/: atf_formatter.hpp  common.hpp  opentuner_formatter.hpp  optuna_formatter.hpp
include/noarr/tuning/: builders.hpp  formatter.hpp  macros.hpp  tuning.hpp
include/noarr/tuning/formatters/: atf_formatter.hpp  common.hpp  dummy_formatter.hpp  opentuner_formatter.hpp  optuna_formatter.hpp
tests/: .gitignore  planner_test.cpp  program.hpp
tests/atf_test/: CMakeLists.txt  run_cmake.sh  run_direct.sh  test_cmake.cpp  test_direct.cpp
tests/dummy_test/: CMakeLists.txt  gen-matrices.py  run.sh  test.cpp
tests/opentuner_test/: CMakeLists.txt  prepare_env.sh  run_cmake.sh  run_direct.sh  test_cmake.cpp  test_direct.cpp
tests/optuna_test/: CMakeLists.txt  run_cmake.sh  run_direct.sh  test_cmake.cpp  test_direct.cpp
